버튼 디자인  추가

--- a/deploy/templates/index.html
+++ b/deploy/templates/index.html
@@ -133,7 +133,7 @@
                                         <p class="card-text">${description}</p>
                                         <p>${star_repeat}</p>
                                         <p class="mycomment">${comment}</p>
-                                        <button onclick="deletebtn('${id}')">삭제</button>
+                                        <button class="mybtns"onclick="deletebtn('${id}')">삭제</button>
                                         </div>
                                     </div>
                                     </div>`;
